# lib-gpu

./: .gitignore  .gitmodules  AUTHORS  README  build.gradle  build.gradle.bak  build.gradle.kts  gradle.properties  gradlew  settings.gradle
common/: build.gradle  commonBuild.bat  commonBuild.sh  libJMetalBuild.bat  libJMetalBuild.sh
common/src/main/java/tech/gpu/lib/: Application.java  ApplicationEnvironment.java  ApplicationListener.java  ApplicationLogger.java  Audio.java  Files.java  Game.java  GpuInfo.java  GpuManager.java  Graphics.java  Input.java  InputEventQueue.java  InputMultiplexer.java  InputProcessor.java  LifecycleListener.java  Preferences.java  Screen.java
common/src/main/java/tech/gpu/lib/assets/: AssetDescriptor.java  AssetErrorListener.java  AssetLoaderParameters.java  AssetLoadingTask.java  AssetManager.java
common/src/main/java/tech/gpu/lib/audio/: AudioDevice.java  AudioRecorder.java  Music.java  Sound.java
common/src/main/java/tech/gpu/lib/common/: GpuInfo.java
common/src/main/java/tech/gpu/lib/ex/: GpuRuntimeException.java  JniRuntimeException.java  PixelFormatNotSupportedException.java  SerializationException.java
common/src/main/java/tech/gpu/lib/files/: FileHandle.java  FileHandleStream.java  package-info.java
common/src/main/java/tech/gpu/lib/glutils/: IndexBufferObject.java  IndexData.java  InstanceBufferObject.java  InstanceData.java  VertexData.java
common/src/main/java/tech/gpu/lib/graphics/: Camera.java  Color.java  Colors.java  Cubemap.java  Mesh.java  OrthographicCamera.java  PerspectiveCamera.java  PixelFormat.java  PixelFormatConverter.java  Pixmap.java  PixmapIO.java  Texture.java  TextureFilter.java  TextureInfo.java  TextureWrap.java  VertexAttribute.java  VertexAttributes.java
common/src/main/java/tech/gpu/lib/input/: GestureDetector.java  NativeInputConfiguration.java  TextInputWrapper.java
common/src/main/java/tech/gpu/lib/jni/: GpuInfo.java  GpuManager.java  TextureNative.java
common/src/main/java/tech/gpu/lib/maps/: ImageResolver.java  Map.java  MapGroupLayer.java  MapLayer.java  MapLayers.java  MapObject.java  MapObjects.java  MapProperties.java  MapRenderer.java
common/src/main/java/tech/gpu/lib/math/: Affine2.java  BSpline.java  Bezier.java  Bresenham2.java  CatmullRomSpline.java  Circle.java  ConvexHull.java  CumulativeDistribution.java  DelaunayTriangulator.java  EarClippingTriangulator.java  Ellipse.java  FloatCounter.java  Frustum.java  GeometryUtils.java  GridPoint2.java  GridPoint3.java  Interpolation.java  Intersector.java  MathUtils.java  Matrix3.java  Matrix4.java  Octree.java  Path.java  Plane.java  Polygon.java  Polyline.java  Quaternion.java  RandomXS128.java  Rectangle.java  Shape2D.java  Vector.java  Vector2.java  Vector3.java  Vector4.java  WindowedMean.java
common/src/main/java/tech/gpu/lib/util/: CommonNativeLoader.java  Disposable.java
common/src/main/java/tech/gpu/lib/utils/: Align.java  Array.java  ArrayMap.java  ArraySupplier.java  Base64Coder.java  BaseJsonReader.java  Bits.java  BooleanArray.java  BufferUtils.java  ByteArray.java  CharArray.java  Clipboard.java  ColorUtil.java  CommonNativeLoader.java  ComparableTimSort.java  DefaultPool.java  DelayedRemovalArray.java  Disposable.java  FloatArray.java  FlushablePool.java  I18NBundle.java  ImmediateModeRenderer.java  IntArray.java  IntIntMap.java  IntMap.java  IntSet.java  Json.java  JsonReader.java  JsonSkimmer.java  JsonString.java  JsonValue.java  JsonWriter.java  LongArray.java  LongMap.java  LongQueue.java  NumberUtils.java  ObjectFloatMap.java  ObjectIntMap.java  ObjectLongMap.java  ObjectMap.java  (+31 more)
common/src/main/java/tech/gpu/lib/viewport/: ExtendViewport.java  FillViewport.java  FitViewport.java  ScalingViewport.java  ScreenViewport.java  StretchViewport.java  (+1 more)
examples/00-example-common/: build.gradle
examples/01-cubes/: build.gradle  build.sh.bak
examples/01-cubes/shader/: CMakeLists.txt  fs_cubes.sc  makefile  nmakefile.mk  vs_cubes.sc
examples/01-cubes__/: build.gradle.kts
examples/01-cubes__/src/main/java/com/example/: Main.java
examples/common/: common.sh
examples/game-demo-superjumper/: build.gradle
game-demo-superjumper/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
libGame/: build.gradle
libJDirectX/: build.gradle  libJDirectxBuild.bat  libJDirectxBuild.sh  libJMetalBuild.bat  libJMetalBuild.sh
libJDirectX/src/main/native/: NativeJniUtil.cpp  NativeJniUtil.h
libJDirectX/src/main/native/common/: CMakeLists.txt  GpuManager.cpp  Texture.cpp
libJDirectX/src/main/native/directx/: CMakeLists.txt  DirectxRenderer.cpp
libJMetal/: build.gradle  libJMetalBuild.bat  libJMetalBuild.sh
libJMetal/src/main/native/common/: CMakeLists.txt
libJMetal/src/main/native/common/include/: GpuManager.h  Texture.h
libJMetal/src/main/native/common/jni/: GpuInfo.cpp  GpuManager.cpp  Texture.cpp
libJMetal/src/main/native/common/object_c_pp/: GpuInfo.m  GpuManager.m  Texture.m
libJMetal/src/main/native/metal/: CMakeLists.txt
libJMetal/src/main/native/metal/object_c_pp/: MetalRenderer.m
libJVulkan/: build.gradle  libJMetalBuild.bat  libJMetalBuild.sh  libJVulkanBuild.bat  libJVulkanBuild.sh
libJavaBgfx/: build.bat  build.gradle  build.gradle.bak  build.gradle.kts  build.sh
libJavaBgfx/src/main/java/com/sun/jna/: MyJFramePointer.java
libJavaBgfx/src/main/java/tech/lib/bgfx/: TestBgfx.java
libJavaBgfx/src/main/resources/: logback.xml
libJavaBgfx/src/test/java/tech/lib/bgfx/: BgfxTest.java
native/: CMakeLists.txt  GpuManager.cpp  GpuManager.h  bgfx_encoder.cpp  bgfx_jni.cpp  bgfx_jni.h  bx_timer.cpp  event_manager_jni.cpp  event_manager_jni.h  game_pad_event.cpp  jni_utils.cpp  jni_utils.h  memory_handle_jni.cpp  vertex_layout.cpp
native/linux/: event_manager.cpp  gpu_manager.cpp  linux_view.cpp
native/macos/: GpuManager.mm  event_manager.cpp  event_manager.mm  macos_view.mm
native/shader/: fs_quad.sc  varying.def.sc  vs_quad.sc
native/windows/: event_manager.cpp  gpu_manager.cpp
support-scripts/: build-bgfx.bat  build-bgfx.sh  generateJniHeader.bat  generateJniHeader.sh
(+474 files in other folders)
